--- a/src/main/resources/dune/file/dunetextgame/DialogueScreen.fxml
+++ b/src/main/resources/dune/file/dunetextgame/DialogueScreen.fxml
@@ -1,75 +1,78 @@
- <?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" stylesheets="@DuneStyles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dune.file.dunetextgame.DialogueScreenController">
    <children>
-      <Pane prefHeight="283.0" prefWidth="640.0">
+      <Pane prefHeight="342.0" prefWidth="640.0" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS">
          <children>
-            <TextField alignment="CENTER" layoutX="224.0" layoutY="204.0" prefHeight="31.0" prefWidth="192.0" promptText="write your choice" style="-fx-border-color: white; -fx-background-color: black;" />
-         </children>
-      </Pane>
-      <HBox alignment="BOTTOM_LEFT" prefHeight="55.0" prefWidth="640.0">
-         <children>
-            <Label alignment="CENTER" prefHeight="30.0" prefWidth="169.0" text="Character Name" textFill="WHITE">
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <GridPane prefHeight="30.0" prefWidth="428.0">
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchTitleScreen" stylesheets="@DuneStyles.css" text="Back" />
+            <GridPane layoutX="210.0" layoutY="84.0" prefHeight="201.0" prefWidth="221.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" text="&gt;" GridPane.columnIndex="4">
-                     <GridPane.margin>
-                        <Insets left="5.0" top="1.0" />
-                     </GridPane.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" text="&lt;" GridPane.columnIndex="3">
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </Button>
+                  <Button fx:id="choice1" mnemonicParsing="false" onAction="#choose1" />
+                  <Button fx:id="choice2" mnemonicParsing="false" onAction="#choose2" GridPane.rowIndex="1" />
+                  <Button fx:id="choice3" mnemonicParsing="false" onAction="#choose3" GridPane.rowIndex="2" />
                </children>
             </GridPane>
          </children>
-      </HBox>
-      <VBox alignment="TOP_CENTER" prefHeight="194.0" prefWidth="640.0">
+      </Pane>
+      <GridPane prefHeight="26.0" prefWidth="628.0" VBox.vgrow="ALWAYS">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="551.0" minWidth="10.0" prefWidth="170.0" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="410.0" minWidth="10.0" prefWidth="368.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="410.0" minWidth="9.0" prefWidth="16.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints />
+            <RowConstraints />
+        </rowConstraints>
          <children>
-            <Label alignment="TOP_LEFT" prefHeight="153.0" prefWidth="597.0" style="-fx-background-color: BLACK; -fx-border-color: white; -fx-border-radius: 2;" text="Dialogue" textFill="WHITE">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </padding>
+            <Button mnemonicParsing="false" prefWidth="29.0" stylesheets="@DuneStyles.css" text="&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Button>
+            <Button alignment="CENTER_RIGHT" mnemonicParsing="false" stylesheets="@DuneStyles.css" text="&lt;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </Button>
+            <Label fx:id="characterNameLabel" text="Character Name" textFill="WHITE" GridPane.rowIndex="1">
                <font>
                   <Font size="17.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="15.0" />
+               </GridPane.margin>
             </Label>
          </children>
-      </VBox>
+      </GridPane>
+      <Label fx:id="characterDialogueLabel" alignment="TOP_LEFT" prefHeight="182.0" prefWidth="620.0" style="-fx-background-color: transparent; -fx-border-color: white;" text="Character Dialogue" textFill="WHITE" VBox.vgrow="ALWAYS">
+         <font>
+            <Font size="15.0" />
+         </font>
+         <VBox.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </Label>
    </children>
 </VBox>
